assets/media_library.backend.css
/* ... */
.ml-file a {
	position: relative;
	display: block;
	margin-left: 15px;
	white-space: nowrap;
}

.ml-file a.alts[data-alts]:hover:before,
.ml-file a.tags[data-tags]:hover:before {
	display: block;
	content: attr(data-tags);
	height: 30px;
	padding: 0 10px;
	background-color: rgba(0,0,0, 0.5);
	border-radius: 3px;
	box-shadow: 0 19px 38px rgba(0,0,0, 0.30), 0 5px 12px rgba(0,0,0, 0.22);
	white-space: nowrap;

	position: absolute;
	bottom: 100%;
	left: 50%;

	transform: translateX(-50%);

	font-size: 11px;
	line-height: 30px;
	color: #fff;
}

.ml-file a.alts[data-alts]:hover:before {
	content: attr(data-alts);
}

.ml-file a.alts.loading,
.ml-file a.tags.loading {
	color: rgba(63, 105, 165, 0.4);
}

.ml-file a.alts.loading:after,
.ml-file a.tags.loading:after {
	display: block;
	content: '';
	width: 20px;
	height: 20px;
	background: url('icons/loader.svg') no-repeat 50% 50% / cover;

	position: absolute;
	top: -2px;
	right: 7px;
}

.ml-file a.alts input,
.ml-file a.alts button,
.ml-file a.tags input,
.ml-file a.tags button {
	margin: 0;
	padding: 0 5px;
	box-shadow: 0 19px 38px rgba(0,0,0, 0.30), 0 5px 12px rgba(0,0,0, 0.22);

	position: absolute;
	top: 50%;
	right: 40px;

	transform: translateY(-50%);
}

.ml-file a.alts input,
.ml-file a.tags input {
	width: 250px;
}

.ml-file a.alts button,
.ml-file a.tags button {
	border-radius: 0 3px 3px 0;
}

.ml-file a.copy + input {
	position: relative;
	top: 3px;
	margin-right: 0;
	margin-left: 5px;
}

.ml-file a.delete {
	color: #e90a20;
}

.ml-file .meta {
	display: none;
}

@media (max-width: 1024px) {

	.ml-file {
		display: block;
	}

	/*.ml-file > div:first-child {
		width: 100%;
	}*/

	.ml-file > div:last-child {
		width: 100%;
		padding: 10px;
		text-align: right;
	}
}

@media (max-width: 570px) {

	.ml-file {

	}

	.ml-file .name {
		width: calc(100% - 60px);
	}

	.ml-file .size {
		display: none;
	}
}
/* @end */

/*
 *	Content lightbox
 */
.ml-lightbox {
	width: 100%;
	height: 100%;
	background-color: rgba(34, 34, 34, 0.7);
	opacity: 0;

	position: fixed;
	top: 0;
	left: 0;
	z-index: 99991;

	transition: opacity 200ms ease-out;
}

.ml-lightbox:before,
.ml-lightbox:after {
	display: block;
	content: '';
	width: 30px;
	height: 2px;
	margin-top: -30px;
	background-color: #fff;
	cursor: pointer;
	opacity: 0;

	position: absolute;
	top: 10%;
	left: 50%;

	transition: opacity 200ms ease-out 200ms;
}


.ml-lightbox:before {
	transform: translate(-50%, -50%) rotate(-45deg);
}

.ml-lightbox:after {
	transform: translate(-50%, -50%) rotate(45deg);
}

.ml-lightbox-content {
	width: 90%;
	/*max-width: 1024px;*/
	height: 80%;
	background: #fff url('icons/loader.svg') no-repeat 50% 50% / 30px 30px;
	overflow: auto;

	position: absolute;
	top: 10%;
	left: 50%;
	transform: translate(-50%, 5%);

	transition: transform 200ms ease-out;
}

.ml-lightbox #contents {
	min-height: auto;
}

.ml-lightbox.is-visible {
	opacity: 1;
}

.ml-lightbox.is-visible:before,
.ml-lightbox.is-visible:after {
	opacity: 1;
}

.ml-lightbox.is-visible .ml-lightbox-content {
	background: #fff;
	transform: translate(-50%, -0%);
}

.ml-lightbox.is-visible .ml-lightbox-content.show-loader {
	background: #fff url('icons/loader.svg') no-repeat 50% 50% / 30px 30px;
}

/* Some Symphony styles override FilePond. These are fixes. */
.filepond--file-action-button.filepond--file-action-button {
	min-height: 0;
}

.filepond--file .filepond--processing-complete-indicator[data-align*='right'] {
	top: 0;
	right: 0;
}

